--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "next-template",
+  "name": "{{name}}",
   "version": "0.1.0",
   "private": true,
+  "description": "{{description}}",
+  "author":"{{author}}",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
